--- a/scanners/examples/example-main-sarif/module.yaml
+++ b/scanners/examples/example-main-sarif/module.yaml
@@ -1,7 +1,7 @@
 api_version: 1.0
 
 
-identifier: example-main-sarif    # unique name
+id: example-main-sarif            # unique name
 name: Example Sarif Scanner       # descriptive name
 namespace: example-main-sarif     # rule namespace
 
