--- a/scanners/boostsecurityio/trivy-sbom/module.yaml
+++ b/scanners/boostsecurityio/trivy-sbom/module.yaml
@@ -14,6 +14,6 @@ steps:
         command:
             docker:
                 image: aquasec/trivy:0.32.0
-                command: fs --format=cyclonedx --security-checks=vuln --cache-dir=/tmp/trivy/ /app
+                command: fs --format=cyclonedx --cache-dir=/tmp/trivy/ /app
                 workdir: /app
         format: cyclonedx
