Updated brakeman image

--- a/scanners/boostsecurityio/brakeman-scanner/module.yaml
+++ b/scanners/boostsecurityio/brakeman-scanner/module.yaml
@@ -17,5 +17,5 @@ steps:
       format: sarif
       post-processor:
         docker:
-          image: test:latest
+          image: public.ecr.aws/boostsecurityio/boost-scanner-brakeman:89a87a3
           command: --interactive
