--- a/scanners/boostsecurityio/brakeman-scanner/rules.yaml
+++ b/scanners/boostsecurityio/brakeman-scanner/rules.yaml
@@ -11,6 +11,7 @@ rules:
   cwe-1022:
     categories:
       - ALL
+      - cwe-1022
     description: The web application produces links to untrusted external sites outside of its sphere of control, but it does not properly prevent the external site from modifying security-critical properties of the window.opener object, such as the location property.
     group: Community Scanners
     name: cwe-1022
@@ -28,6 +29,7 @@ rules:
   cwe-125:
     categories:
       - ALL
+      - cwe-125
     description: The software reads data past the end, or before the beginning, of the intended buffer.
     group: Community Scanners
     name: cwe-125
@@ -36,6 +38,7 @@ rules:
   cwe-1254:
     categories:
       - ALL
+      - cwe-1254
     description: The comparison logic is performed over a series of steps rather than across the entire string in one operation. If there is a comparison logic failure, the operation may be vulnerable to a timing attack that can result in the interception of the process.
     group: Community Scanners
     name: cwe-1254
@@ -44,6 +47,7 @@ rules:
   cwe-1336:
     categories:
       - ALL
+      - cwe-1336
     description: The product uses a template engine to insert or process externally-influenced input, but it does not neutralize or incorrectly neutralizes special elements or syntax that can be interpreted as template expressions or other code directives when processed by the engine.
     group: Community Scanners
     name: cwe-1336
@@ -52,6 +56,7 @@ rules:
   cwe-185:
     categories:
       - ALL
+      - cwe-185
     description: The software specifies a regular expression in a way that causes data to be improperly matched or compared.
     group: Community Scanners
     name: cwe-185
@@ -78,6 +83,7 @@ rules:
   cwe-22:
     categories:
       - ALL
+      - cwe-22
     description: The software uses external input to construct a pathname that is intended to identify a file or directory that is located underneath a restricted parent directory, but the software does not properly neutralize special elements within the pathname.
     group: Community Scanners
     name: cwe-22
@@ -86,6 +92,7 @@ rules:
   cwe-259:
     categories:
       - ALL
+      - cwe-259
     description: The software contains a hard-coded password, which it uses for its own inbound authentication or for outbound communication to external components.
     group: Community Scanners
     name: cwe-259
@@ -103,6 +110,7 @@ rules:
   cwe-285:
     categories:
       - ALL
+      - cwe-285
     description: The software does not perform or incorrectly performs an authorization check when an actor attempts to access a resource or perform an action.
     group: Community Scanners
     name: cwe-285
@@ -129,6 +137,7 @@ rules:
   cwe-328:
     categories:
       - ALL
+      - cwe-328
     description: The product uses an algorithm that produces a digest that does not meet security expectations for a hash function that allows a preimage attack, find another input that can produce the same hash (2nd preimage attack), or birthday attack.
     group: Community Scanners
     name: cwe-328
@@ -146,6 +155,7 @@ rules:
   cwe-369:
     categories:
       - ALL
+      - cwe-369
     description: The product divides a value by zero.
     group: Community Scanners
     name: cwe-369
@@ -154,6 +164,7 @@ rules:
   cwe-399:
     categories:
       - ALL
+      - cwe-399
     description: Weaknesses in this category are related to improper management of system resources.
     group: Community Scanners
     name: cwe-399
@@ -162,6 +173,7 @@ rules:
   cwe-470:
     categories:
       - ALL
+      - cwe-470
     description: The application uses external input with reflection to select which classes or code to use, but it does not sufficiently prevent the input from selecting improper classes or code.
     group: Community Scanners
     name: cwe-470
@@ -179,9 +191,10 @@ rules:
   cwe-565:
     categories:
       - ALL
+      - cwe-565
     description: The application relies on the existence or values of cookies when performing security-critical operations, but it does not properly ensure that the setting is valid for the associated user.
     group: Community Scanners
-    name: ref:
+    name: cwe-565
     pretty_name: "CWE-565: Reliance on Cookies without Validation and Integrity Checking"
     ref: https://cwe.mitre.org/data/definitions/565.html
   cwe-601:
@@ -214,6 +227,7 @@ rules:
   cwe-77:
     categories:
       - ALL
+      - cwe-77
     description: The software constructs all or part of a command using externally-influenced input from an upstream component, but it does not neutralize or incorrectly neutralizes special elements that could modify the intended command when it is sent to a downstream component.
     group: Community Scanners
     name: cwe-77
@@ -222,6 +236,7 @@ rules:
   cwe-777:
     categories:
       - ALL
+      - cwe-777
     description: The software uses a regular expression to perform neutralization, but the regular expression is not anchored and may allow malicious or malformed data to slip through.
     group: Community Scanners
     name: cwe-777
@@ -257,6 +272,7 @@ rules:
   cwe-913:
     categories:
       - ALL
+      - cwe-913
     description: The software does not properly restrict reading from or writing to dynamically-managed code resources such as variables, objects, classes, attributes, functions, or executable instructions or statements.
     group: Community Scanners
     name: cwe-913
