--- a/scanners/boostsecurityio/semgrep-scanner/module.yaml
+++ b/scanners/boostsecurityio/semgrep-scanner/module.yaml
@@ -17,7 +17,7 @@ steps:
           environment:
             XDG_CONFIG_HOME: /tmp
             HOME: /tmp
-            SEMGREP_RULES: p/ci
+            SEMGREP_RULES: ${SEMGREP_RULES:-auto}
       format: sarif
       post-processor:
         docker:
