Use system API key

--- a/.github/workflows/registry-scanner.yaml
+++ b/.github/workflows/registry-scanner.yaml
@@ -22,4 +22,4 @@ jobs:
       - name: Scan Registry
         uses: boostsecurityio/scanner-registry-action@v1.0.0
         with:
-          api_token: ${{ secrets.BOOST_API_TOKEN }}
+          api_token: ${{ secrets.BOOST_SYSTEM_API_KEY_REGISTRY_PROD }}
