codeql: always overwrite the database

--- a/scanners/boostsecurityio/codeql/module.yaml
+++ b/scanners/boostsecurityio/codeql/module.yaml
@@ -55,6 +55,7 @@ steps:
             --logdir=/tmp \
             --quiet \
             --threads=0 \
+            --overwrite \
             $CODEQL_ANALYZE_ARGS \
             -- "$SETUP_PATH/codeql-db" $CODEQL_QUERY
 
