Normalize module names and force sync of all rules.yaml, Drive-by fix up CWE-190 -> CWE-119

--- a/scanners/boostsecurityio/trivy-image/module.yaml
+++ b/scanners/boostsecurityio/trivy-image/module.yaml
@@ -2,7 +2,7 @@ api_version: 1.0
 
 
 id: boostsecurityio/trivy-image
-name: Boostsecurity Trivy Image Scanner
+name: BoostSecurity Trivy (Image scanning)
 namespace: boostsecurityio/trivy-image
 
 
